Adding in projects page.
This commit adds in a new page called the projects page. This page displays
my projects using and iframe. I updated the navigation to link to the new page.

--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
 		<a href="index.html">Index</a>
 		<a href="resume.html">Resume</a>
 		<a href="contact.html">Contact</a>
+		<a href="projects.html">Projects</a>
 	</div>
 	
 	<!-- Main content area -->
