--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<a href="index.html">Index</a>
 		<a href="resume.html">Resume</a>
 		<a href="contact.html">Contact</a>
+		<a href="projects.html">Projects</a>
 	</div>
 
 	<!-- Main content area -->
@@ -33,15 +34,15 @@
 	
 		<!-- Education Section -->
 		<h2 class="heading">Education</h2>
-		<ol>
-			<li> <em>Kendall Jr/Sr HighSchool</em>
+		<ol class="removeNumbers">
+			<li> <em class="blue">Kendall Jr/Sr HighSchool</em>
 				<ul> <!-- Unordered list inside an ordered list -->
 					<li>Graduated in 2016.</li>
 					<li>Top 10 in my class.</li>
 				</ul>
 			</li>
 			<br />
-			<li> <em>The College at Brockport</em>
+			<li> <em class="blue">The College at Brockport</em>
 				<ul>
 					<li>Graduating in 2019.</li>
 					<li>Bachelor's Degree in Computer Science.</li>
