--- a/resume.html
+++ b/resume.html
@@ -25,6 +25,7 @@
 		<a href="index.html">Index</a>
 		<a href="resume.html">Resume</a>
 		<a href="contact.html">Contact</a>
+		<a href="projects.html">Projects</a>
 	</div>
 
 	<!-- Main content area -->
@@ -34,10 +35,10 @@
 		<h2 class="heading">Skills</h2>
 		<ul class="list-style-none">
 			<li>
-				<em>Front End:</em>&nbsp;&nbsp; CSS3, JavaScript, jQuery, Bootstrap, and Semantic UI.
+				<em class="blue">Front End:</em>&nbsp;&nbsp; CSS3, JavaScript, jQuery, Bootstrap, and Semantic UI.
 			</li>
 			<li>
-				<em>Back End:</em>&nbsp;&nbsp; Node.js, Expres.js, MongoDB, SQL, JSON.
+				<em class="blue">Back End:</em>&nbsp;&nbsp; Node.js, Expres.js, MongoDB, SQL, JSON.
 			</li>
 		</ul>
 		
@@ -47,7 +48,7 @@
 		<!-- Website I created for the final project for a online course that I started last February.-->
 		<ul style="list-style: none">
 			<li>
-				<em>YelpCamp</em>&nbsp;
+				<em class="blue">YelpCamp</em>&nbsp;
 				<a class="underline" href="https://yelpcamp18.herokuapp.com/">Website</a>&nbsp;
 				<a class="underline"href="https://github.com/JacobRichardson/YelpCamp">Code</a>
 			</li>
@@ -61,7 +62,7 @@
 		<!-- Simple project utilizing Semantic UI which is a front-end web framework.-->
 		<ul style="list-style: none">
 			<li>
-				<em>Blog App</em>&nbsp;
+				<em class="blue">Blog App</em>&nbsp;
 				<a class="underline" href="https://blog-app18.herokuapp.com/blogs">Website</a>&nbsp;
 				<a class="underline" href="https://github.com/JacobRichardson/BlogApp">Code</a>
 			</li>
