--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,9 @@
     <meta name="Description" content="CIS 117 Assingmnet 5" />
 
 	<!-- CSS Styles -->
-    <link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" type="text/css" href="style.css" />
+	<!-- Font Awesome CDN -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" crossorigin="anonymous">
 </head>
 <body>
 	<!--Page Heading -->
@@ -31,6 +33,19 @@
 	<!-- Main content area -->
 	<div class="content">
 
+		<!-- Contact Information Section -->
+		<div class="resume-heading">
+			<p><i class="fas fa-phone margin-right"></i>(585)331-2320</p>
+			<p><i class="fas fa-envelope margin-right"></i>jacob.richardson3@gmail.com</p>
+			<a href="https://www.linkedin.com/in/jacob-richardson-b7360a170/"><i class="fab fa-linkedin margin-right"></i>LinkedIn</a>
+			<a href="https://www.github.com/JacobRichardson"><i class="fab fa-github margin-right"></i>Github</a>
+		</div>
+
+		<!-- Summary Section -->
+		<h2 class="heading">Summary</h2>
+		<p>Hi my name is Jacob Richardson and I am passionate about learning new technologies that will assist me in helping others through programming.</p>
+
+
 		<!-- Skills Section -->
 		<h2 class="heading">Skills</h2>
 		<ul class="list-style-none">
@@ -40,13 +55,35 @@
 			<li>
 				<em class="blue">Back End:</em>&nbsp;&nbsp; Node.js, Expres.js, MongoDB, SQL, JSON.
 			</li>
+			<li>
+				<em class="blue">Version Control:</em>&nbsp;&nbsp; Git, Github, Gitlab.
+			</li>
 		</ul>
 		
+		<!-- Experience Section -->
+		<h2 class="heading">Experience</h2>
+
+		<ul class="list-style-none">
+			<li class="margin-bottom">
+				<em class="blue">Pavilon Gift Company</em>&nbsp;
+			</li>
+			<ul>
+				<li>Redesigned website to use Semantic UI.</li>
+				<li>Responsible for talking IT calls.</li>
+				<li>Troubleshooting issues with employee's computers</li>
+				<li>Maintaining multiple systems.</li>
+				<li>Implemented a RESTful server for product reviews.</li>
+				<li>Created a inhouse web application to process invoices from other companies.</li>
+				<li>Improved EDI intergration for new wholesale customers.</li>
+			</ul>
+		</ul>
+
+
 		<!-- Projects Section -->
 		<h2 class="heading">Projects</h2>
 
 		<!-- Website I created for the final project for a online course that I started last February.-->
-		<ul style="list-style: none">
+		<ul class="list-style-none">
 			<li>
 				<em class="blue">YelpCamp</em>&nbsp;
 				<a class="underline" href="https://yelpcamp18.herokuapp.com/">Website</a>&nbsp;
@@ -60,7 +97,7 @@
 		</ul>
 		
 		<!-- Simple project utilizing Semantic UI which is a front-end web framework.-->
-		<ul style="list-style: none">
+		<ul class="list-style-none">
 			<li>
 				<em class="blue">Blog App</em>&nbsp;
 				<a class="underline" href="https://blog-app18.herokuapp.com/blogs">Website</a>&nbsp;
@@ -73,8 +110,27 @@
 			</ul>
 		</ul>
 		
+		<!-- Projects Section -->
+		<h2 class="heading">Eduacation</h2>
+
+		<ul class="list-style-none">
+			<li>
+				<em class="blue">Suny Brockport</em>&nbsp;
+			</li>
+			<ul class="list-style-none">
+				<li>
+					Bachelors of Computer Science 2019.
+				</li>
+				<li>
+					<span class="underline">GPA:</span> 3.9. President's List Spring 2018, 2019.
+				</li>
+			</ul>
+		</ul>
+
 		<!-- Link to my resume that got me a position as a Jr Web Developer. -->
-		<a class="resume" href="Resume.docx">Acutal Resume</a>
+		<a class="resume" href="Resume.docx">Downloadable Resume</a>
+
+
 	</div>
 	
 </body>
