Removing html validator errors.

--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,11 @@
 <head>
 
 	<!-- This is extra info about the webpage that is not displayed. -->
-	<title>Index</title>
+	<title>Contact</title>
 	<meta charset="utf-8" />
     <meta name="Author" content="Jacob Richardson" />
     <meta name="Keywords" content="Jacob Richardson" />
-    <meta name="Description" content="CIS 117 Assingmnet 5" />
+    <meta name="Description" content="CIS 117 Final Project, Contact" />
 
     <!-- CSS Styles -->
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -17,13 +17,13 @@
 	<!--Page Heading -->
 	<div>
 		<a href="index.html">
-			<img class="big-image"src="icon3.jpg">
+			<img class="big-image" src="icon3.jpg" alt="Homepage logo.">
 		</a>
 	</div>
 	
 	<!-- Navigation -->
 	<div class="navigation">
-		<a href="index.html">Index</a>
+		<a href="index.html">Homepage</a>
 		<a href="resume.html">Resume</a>
 		<a href="contact.html">Contact</a>
 		<a href="projects.html">Projects</a>
