--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<!-- This is extra info about the webpage that is not displayed. -->
-	<title>Index</title>
+	<title>Homepage</title>
 	<meta charset="utf-8" />
     <meta name="Author" content="Jacob Richardson" />
     <meta name="Keywords" content="Jacob Richardson" />
-    <meta name="Description" content="CIS 117 Assingmnet 5" />
+    <meta name="Description" content="CIS 117 Final Project, Homepage" />
 
 	<!-- CSS Styles -->
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -16,14 +16,14 @@
 	<!--Page Heading -->
 	<div>
 		<a href="index.html">
-			<img class="big-image"src="icon3.jpg">
+			<img class="big-image" src="icon3.jpg" alt="Homepage logo">
 		</a>
 	</div>
 
 	
 	<!-- Navigation -->
 	<div class="navigation">
-		<a href="index.html">Index</a>
+		<a href="index.html">Homepage</a>
 		<a href="resume.html">Resume</a>
 		<a href="contact.html">Contact</a>
 		<a href="projects.html">Projects</a>
@@ -41,7 +41,7 @@
 					<li>Top 10 in my class.</li>
 				</ul>
 			</li>
-			<br />
+				
 			<li> <em class="blue">The College at Brockport</em>
 				<ul>
 					<li>Graduating in 2019.</li>
@@ -52,6 +52,7 @@
 		</ol>
 		<br />
 
+		
 		<!-- Career Goals Section -->
 		<h2 class="heading">Career Goals</h2>
 		<ul>
@@ -68,7 +69,6 @@
 			<li> I wondered how is this working? How are the parts are interacting? </li>
 			<li> This is what lead me to build my own computer and eventually to pursure a bachelor's degree in computer science.
 		</ul>	
-
 	</div>
 
 </body>
