--- a/resume.html
+++ b/resume.html
@@ -3,11 +3,11 @@
 <head>
 
 	<!-- This is extra info about the webpage that is not displayed. -->
-	<title>Index</title>
+	<title>Resume</title>
 	<meta charset="utf-8" />
     <meta name="Author" content="Jacob Richardson" />
     <meta name="Keywords" content="Jacob Richardson, Resume" />
-    <meta name="Description" content="CIS 117 Assingmnet 5" />
+    <meta name="Description" content="CIS 117 Final Project, Resume" />
 
 	<!-- CSS Styles -->
 	<link rel="stylesheet" type="text/css" href="style.css" />
@@ -18,13 +18,13 @@
 	<!--Page Heading -->
 	<div>
 		<a href="index.html">
-			<img class="big-image"src="icon3.jpg">
+			<img class="big-image" src="icon3.jpg" alt="Homepage logo.">
 		</a>
 	</div>
 	
 	<!-- Navigation -->
 	<div class="navigation">
-		<a href="index.html">Index</a>
+		<a href="index.html">Homepage</a>
 		<a href="resume.html">Resume</a>
 		<a href="contact.html">Contact</a>
 		<a href="projects.html">Projects</a>
@@ -63,19 +63,17 @@
 		<!-- Experience Section -->
 		<h2 class="heading">Experience</h2>
 
-		<ul class="list-style-none">
-			<li class="margin-bottom">
+		<ul>
+			<li class="margin-bottom list-style-none">
 				<em class="blue">Pavilon Gift Company</em>&nbsp;
 			</li>
-			<ul>
-				<li>Redesigned website to use Semantic UI.</li>
-				<li>Responsible for talking IT calls.</li>
-				<li>Troubleshooting issues with employee's computers</li>
-				<li>Maintaining multiple systems.</li>
-				<li>Implemented a RESTful server for product reviews.</li>
-				<li>Created a inhouse web application to process invoices from other companies.</li>
-				<li>Improved EDI intergration for new wholesale customers.</li>
-			</ul>
+			<li>Redesigned website to use Semantic UI.</li>
+			<li>Responsible for talking IT calls.</li>
+			<li>Troubleshooting issues with employee's computers</li>
+			<li>Maintaining multiple systems.</li>
+			<li>Implemented a RESTful server for product reviews.</li>
+			<li>Created a inhouse web application to process invoices from other companies.</li>
+			<li>Improved EDI intergration for new wholesale customers.</li>
 		</ul>
 
 
@@ -83,48 +81,42 @@
 		<h2 class="heading">Projects</h2>
 
 		<!-- Website I created for the final project for a online course that I started last February.-->
-		<ul class="list-style-none">
-			<li>
+		<ul>
+			<li class="list-style-none">
 				<em class="blue">YelpCamp</em>&nbsp;
 				<a class="underline" href="https://yelpcamp18.herokuapp.com/">Website</a>&nbsp;
-				<a class="underline"href="https://github.com/JacobRichardson/YelpCamp">Code</a>
+				<a class="underline" href="https://github.com/JacobRichardson/YelpCamp">Code</a>
 			</li>
-			<ul>
-				<li>
-					Web application that allows users to create their favorite campground locations.
-				</li>
-			</ul>
+			<li>
+				Web application that allows users to create their favorite campground locations.
+			</li>
 		</ul>
 		
 		<!-- Simple project utilizing Semantic UI which is a front-end web framework.-->
-		<ul class="list-style-none">
-			<li>
+		<ul>
+			<li class="list-style-none">
 				<em class="blue">Blog App</em>&nbsp;
 				<a class="underline" href="https://blog-app18.herokuapp.com/blogs">Website</a>&nbsp;
 				<a class="underline" href="https://github.com/JacobRichardson/BlogApp">Code</a>
 			</li>
-			<ul>
-				<li>
-					A blog website that allows a user to create, edit, and delete blog posts.
-				</li>
-			</ul>
+			<li>
+				A blog website that allows a user to create, edit, and delete blog posts.
+			</li>
 		</ul>
 		
 		<!-- Projects Section -->
 		<h2 class="heading">Eduacation</h2>
 
-		<ul class="list-style-none">
-			<li>
+		<ul>
+			<li class="list-style-none">
 				<em class="blue">Suny Brockport</em>&nbsp;
 			</li>
-			<ul class="list-style-none">
-				<li>
-					Bachelors of Computer Science 2019.
-				</li>
-				<li>
-					<span class="underline">GPA:</span> 3.9. President's List Spring 2018, 2019.
-				</li>
-			</ul>
+			<li>
+				Bachelors of Computer Science 2019.
+			</li>
+			<li>
+				<span class="underline">GPA:</span> 3.9. President's List Spring 2018, 2019.
+			</li>
 		</ul>
 
 		<!-- Link to my resume that got me a position as a Jr Web Developer. -->
