Adding an addtional project onto the resume portion and fixing up some typos.

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 		<h2 class="heading"> About Me</h2>
 		<ul>
 			<li> Hi my name is Jacob Richardson and I am a Junior Web Developer.</li>
-			<li> What orignally got me interested in computers were videogames. </li>
+			<li> What originally got me interested in computers were video games. </li>
 			<li> I wondered how is this working? How are the parts are interacting? </li>
-			<li> This is what lead me to build my own computer and eventually to pursure a bachelor's degree in computer science.
+			<li> This is what lead me to build my own computer and eventually to pursue a bachelor's degree in computer science.
 		</ul>	
 	</div>
 
