--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
 
 		<!-- Contact Information Section -->
 		<div class="resume-heading">
-			<p><i class="fas fa-phone margin-right"></i>(585)331-2320</p>
+			<p><i class="fas fa-phone margin-right"></i>(585) 331-2320</p>
 			<p><i class="fas fa-envelope margin-right"></i>jacob.richardson3@gmail.com</p>
 			<a href="https://www.linkedin.com/in/jacob-richardson-b7360a170/"><i class="fab fa-linkedin margin-right"></i>LinkedIn</a>
 			<a href="https://www.github.com/JacobRichardson"><i class="fab fa-github margin-right"></i>Github</a>
@@ -65,15 +65,15 @@
 
 		<ul>
 			<li class="margin-bottom list-style-none">
-				<em class="blue">Pavilon Gift Company</em>&nbsp;
+				<em class="blue">Pavilion Gift Company</em>&nbsp;
 			</li>
 			<li>Redesigned website to use Semantic UI.</li>
 			<li>Responsible for talking IT calls.</li>
 			<li>Troubleshooting issues with employee's computers</li>
 			<li>Maintaining multiple systems.</li>
 			<li>Implemented a RESTful server for product reviews.</li>
-			<li>Created a inhouse web application to process invoices from other companies.</li>
-			<li>Improved EDI intergration for new wholesale customers.</li>
+			<li>Created a in-house web application to process invoices from other companies.</li>
+			<li>Improved EDI integration for new wholesale customers.</li>
 		</ul>
 
 
@@ -103,24 +103,35 @@
 				A blog website that allows a user to create, edit, and delete blog posts.
 			</li>
 		</ul>
-		
+	
+		<!-- Simple project utilizing React.-->
+		<ul>
+			<li class="list-style-none">
+				<em class="blue">Recipe App</em>&nbsp;
+				<a class="underline" href="https://github.com/JacobRichardson/Recipe-App">Code</a>
+			</li>
+			<li>
+				A simple recipe app I created to learn more about React.
+			</li>
+		</ul>
+	
 		<!-- Projects Section -->
-		<h2 class="heading">Eduacation</h2>
+		<h2 class="heading">Education</h2>
 
 		<ul>
 			<li class="list-style-none">
-				<em class="blue">Suny Brockport</em>&nbsp;
+				<em class="blue">SUNY Brockport</em>&nbsp;
 			</li>
 			<li>
 				Bachelors of Computer Science 2019.
 			</li>
 			<li>
-				<span class="underline">GPA:</span> 3.9. President's List Spring 2018, 2019.
+				<span class="underline">GPA:</span> 3.8. President's List Spring 2018, 2019.
 			</li>
 		</ul>
 
 		<!-- Link to my resume that got me a position as a Jr Web Developer. -->
-		<a class="resume" href="Resume.docx">Downloadable Resume</a>
+		<a class="resume" href="Resume.docx">Download Resume</a>
 
 
 	</div>
